[package]
name = "examples"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "list_contracts"
path = "src/list_contracts.rs"

[[bin]]
name = "delete_executed_transfers"
path = "src/delete_executed_transfers.rs"

[dependencies]
common = { path = "../common" }
keycloak = { path = "../keycloak" }
ledger = { path = "../ledger" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenvy = { workspace = true }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
