[package]
name = "examples"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "list_contracts"
path = "src/list_contracts.rs"

[[bin]]
name = "delete_executed_transfers"
path = "src/delete_executed_transfers.rs"

[dependencies]
dotenvy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

common = { workspace = true }
keycloak = { workspace = true }
ledger = { workspace = true }
