[package]
name = "ledger"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

canton-api-client = "3.3.0-0.1.0"
futures-util = "0.3.31"
log = "0.4.17"
rand = "0.8"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5.4"

common = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-macros = { workspace = true }

keycloak = { workspace = true }
