[package]
name = "registry"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

common = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }

keycloak = { workspace = true }
ledger = { workspace = true }
