[package]
name = "wallet"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde", "clock"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-macros = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }

keycloak = { workspace = true }
